# Noveris-AI

./: .env.example  .gitignore  CLAUDE.md  MOCK_AUTH_GUIDE.md  README.md  env-example-template.txt
Backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  beat.py  main.py  pyproject.toml  worker.py
Backend/alembic_migrations/: alembic.ini  env.py
Backend/alembic_migrations/versions/: 20250114_0000_initial_schema.py  20260115_0247_fe28b8e0d255_add_model_market_tables.py  20260115_0900_add_node_management_tables.py  20260115_1400_add_model_deployment_tables.py  20260115_1800_add_authorization_tables.py  20260116_0001_add_gateway_tables.py  20260116_0200_add_chat_tables.py  20260117_0001_add_settings_tables.py  20260117_0314_e9f2f589d231_add_permission_metadata_column.py  20260117_0319_3af42673ab15_change_effect_to_text.py  20260117_0325_b085bc0937cf_change_node_enums_to_varchar.py  20260118_0001_add_monitoring_tables.py  20260118_0002_add_tenant_and_superuser.py
Backend/app/: __init__.py  main.py
Backend/app/ansible/playbooks/: README.yml  bootstrap.yml  collect_facts.yml  connectivity_check.yml  docker_install.yml  health_check.yml  monitoring_deploy.yml  nvidia_driver_install.yml  package_update.yml  security_hardening.yml  user_management.yml  windows_connectivity_check.yml  windows_facts_collection.yml
Backend/app/ansible/templates/: config.json.j2  run_wrapper.py.j2  systemd.service.j2
Backend/app/api/v1/: alerts.py  auth.py  bulk.py  cloud.py  credentials.py  deployments.py  health.py  models.py  nodes.py  sso.py  ws_events.py
Backend/app/authz/: __init__.py  casbin_config.py  casbin_enforcer.py  dependencies.py  models.py  permissions.manifest.json  routes.py  schemas.py  service.py
Backend/app/chat/: __init__.py
Backend/app/chat/api/: __init__.py  admin.py  playground.py  public.py
Backend/app/chat/services/: __init__.py  conversations.py  mcp_client.py  openai_client.py  uploads.py
Backend/app/chat/tools/: __init__.py
Backend/app/core/: config.py  database.py  dependencies.py  init_admin.py  security.py  session.py
Backend/app/gateway/: __init__.py
Backend/app/gateway/adapters/: __init__.py  base.py  cohere_rerank.py  custom_http.py  openai.py  openai_compatible.py  stable_diffusion.py
Backend/app/gateway/middleware/: __init__.py  auth.py  rate_limit.py  ssrf_guard.py  (+1 more)
Backend/app/mcp_servers/: __init__.py
Backend/app/models/: __init__.py  alerting.py  chat.py  deployment.py  gateway.py  model_market.py  node.py  settings.py  user.py
Backend/app/monitoring/: __init__.py  models.py  routes.py  schemas.py  service.py
Backend/app/schemas/: __init__.py  alerting.py  auth.py  deployment.py  model_market.py  node_management.py
Backend/app/services/: auth_service.py  email_service.py  model_market_service.py  model_sync_service.py  rate_limit_service.py
Backend/app/settings/: __init__.py  encryption.py  routes.py  schemas.py  service.py  sso.py  sso_routes.py
Backend/app/sso/: __init__.py  config.py  oauth2.py  oidc.py
Backend/app/worker/: __init__.py  ansible_runner_worker.py  celery_app.py  sync_tasks.py
Backend/scripts/: seed_node_management.py
Backend/tools/: perm_discovery.py  perm_discovery_backend.py  perm_discovery_frontend.py
(+317 files in other folders)
